# stocks_learning

./: .gitignore  README.md  pyproject.toml
finance_dashboard/: app.py
finance_dashboard/lib/: db.py  formats.py  ledger.py  settings.py
finance_dashboard/pages/: 1_Interest_funding.py  2_Import_movements.py  3_import_pdf.py  4_importar_movimientos.py
finance_dashboard/parsers/: bbva.py
