[project]
name = "stocks-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "axlrosas",email = "axlrosas9902@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "yfinance (>=1.0,<2.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "streamlit (>=1.52.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
